# gamcoin

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libgamcoinconsensus.pc.in
.github/: PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  gamcoin.sln  gamcoin_config.h.in  msvc-autogen.py  vcpkg.json
ci/: lint_imagefile  lint_run_all.sh  test_imagefile  test_run_all.sh
contrib/: README.md  filter-lcov.py  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  gamcoin-conf.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  (+5 more)
doc/man/: Makefile.am  gamcoin-cli.1  gamcoin-qt.1  gamcoin-tx.1  gamcoin-util.1  gamcoin-wallet.1  gamcoind.1
share/: genbuild.sh  setup.nsi.in
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  addrdb.h  (+160 more)
(+1600 files in other folders)
