dist_man1_MANS=

if BUILD_GAMCOIND
  dist_man1_MANS+=gamcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=gamcoin-qt.1
endif

if BUILD_GAMCOIN_CLI
  dist_man1_MANS+=gamcoin-cli.1
endif

if BUILD_GAMCOIN_TX
  dist_man1_MANS+=gamcoin-tx.1
endif

if BUILD_GAMCOIN_UTIL
  dist_man1_MANS+=gamcoin-util.1
endif

if ENABLE_WALLET
if BUILD_GAMCOIN_WALLET
  dist_man1_MANS+=gamcoin-wallet.1
endif
endif
